# devplatform-template-python-service

./: .flake8  .pre-commit-config.yaml  Aptfile  Procfile  README.md  boilerplate-values.yml  catalog-info.yaml  project.toml  pyproject.toml
.abs/: main.yaml
.github/workflows/: check-sub-pr-status.yaml  release.yaml  template-and-release.yaml  trigger-root-pr.yaml  update-pre-commit.yaml  validate-test.yaml
albums_python_service/: __init__.py  album.py  version.py
albums_python_service/templates/: addalbum.html  albums.html  footer.html
cnbp-custom-stack/: build-with-docker.sh  build.Dockerfile  builder.toml  run.Dockerfile
helm/: Chart.yaml  README.md  values.schema.json  values.yaml
helm/templates/: deployment.yaml  hpa.yaml  ingress.yaml  poddisruptionbudget.yaml
helm/templates/tests/: test-connection.yaml
project-template/: .gitignore  Procfile  README.md  boilerplate.yml  catalog-info.yaml  project.toml  pyproject.toml
project-template/.github/workflows/: release.yaml  trigger-root-pr.yaml  update-pre-commit.yaml  validate-test.yaml
project-template/helm/: Chart.yaml  values.yaml
project-template/helm/templates/: NOTES.txt  deployment.yaml  podlogs.yaml  service.yaml  servicemonitor.yaml
project-template/python_service/templates/: error.html
project-template/tests/: conftest.py
python_service/: __init__.py  version.py
python_service/templates/: album.html  index.html
tests/: test_api.py
