[tool.poetry]
name = "demo-album-catalog-python"
version = "0.0.0-dev"
description = ""
authors = ["giantswarm"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^23.0.0"
prometheus-flask-exporter = "^0.23.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
